wip: commit pro mano Valdas

--- a/trabalho4/.vscode/launch.json
+++ b/trabalho4/.vscode/launch.json
@@ -18,8 +18,8 @@
                 "15",
                 "--resources",
                 "2",
-                // "--threads",
-                // "12"
+                "--threads",
+                "1"
             ],
             "stopAtEntry": true,
             "cwd": "${fileDirname}",
