--- a/trabalho4/.vscode/settings.json
+++ b/trabalho4/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "math.h": "c",
         "unistd.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "semaphore.h": "c",
+        "syscall.h": "c",
+        "pthread.h": "c"
     }
 }
